--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -9,18 +9,18 @@
       position: absolute;
       display: inline-block;
       box-sizing: border-box;
-      height: 100%; width: 100%;
+      height: 100%; width: 340px;
       border-left: 1px solid #ddd;
       background-color: #f8f8f8;
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
-      right: -300px;
+      right: -270px;
       z-index: 10;
     }
     :host(.active) {
-      right: -20px;
-      overflow: hidden;
+      right: 0px;
+      overflow: scroll;
       z-index: 100;
     }
     #search {
