improve toggling button

--- a/src/generic_ui/polymer/button.html
+++ b/src/generic_ui/polymer/button.html
@@ -12,6 +12,9 @@
       line-height: 50px;
       opacity: 0.6;
       cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
     }
     :host(:hover) {
       opacity: 1.0;
