Small fixes for: freedom logging; secure in freedom tcp sockets; and updated package version

--- a/freedom/samples/freedomchat-chromeapp/main.html
+++ b/freedom/samples/freedomchat-chromeapp/main.html
@@ -30,7 +30,7 @@
     {
       // This is useful for debugging.
       //
-      "debug": true
+      "debug": "debug"
 
       // This makes modules run in iFrames instead of WebWorkers. You get
       // syntax error warnings from iFrames where WebWorker's silently die.
@@ -41,7 +41,7 @@
   <script src='lib/freedom/freedom-for-webpages-for-uproxy.js'
           data-manifest='freedom-module.json'>
   {
-    "debug": false
+    "debug": "log"
   }
   </script>
   <script src='main.js'></script>
