pull js out of polymer html because chrome ext CSP prohibits inline scripts

--- a/src/generic_ui/polymer/button.html
+++ b/src/generic_ui/polymer/button.html
@@ -41,12 +41,5 @@
     <content>
     </content>
   </template>
-  <script>
-    Polymer({
-      img: 'lol',
-      click: function(event, detail, sender) {
-        this.fire('clicked');
-      }
-    });
-  </script>
+  <script src='button.js'></script>
 </polymer-element>
