--- a/src/generic_ui/polymer/networks.html
+++ b/src/generic_ui/polymer/networks.html
@@ -59,16 +59,5 @@
 
   </template>
 
-  <script>
-    Polymer({
-      networks: [
-        'google',
-        'facebook'
-      ],
-      ready: function() {
-        console.log('initializing networks');
-      }
-    });
-  </script>
-
+  <script src='networks.js'></script>
 </polymer-element>
