--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -78,12 +78,6 @@
 
   </template>
 
-  <script>
-    Polymer({
-      ready: function() {
-        console.log('initializing settings');
-      }
-    });
-  </script>
+  <script src='settings.js'></script>
 
 </polymer-element>
