--- a/src/generic_ui/polymer/toolbar.html
+++ b/src/generic_ui/polymer/toolbar.html
@@ -14,7 +14,5 @@
     <content>
     </content>
   </template>
-  <script>
-    Polymer({});
-  </script>
+  <script src='toolbar.js'></script>
 </polymer-element>
