--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -51,21 +51,6 @@
 
   </template>
 
-  <script>
-    Polymer({
-      contacts: [],
-      ready: function() {
-        console.log('initializing roster');
-        this.contacts.push({
-          name: 'alice',
-          description: 'just some laptop'
-        });
-        this.contacts.push({ name: 'bob' });
-        this.contacts.push({ name: 'charlie' });
-        this.contacts.push({ name: 'dave' });
-        this.contacts.push({ name: 'eve' });
-      }
-    });
-  </script>
+  <script src='roster.js'></script>
 
 </polymer-element>
