--- a/src/generic_ui/polymer/ui.html
+++ b/src/generic_ui/polymer/ui.html
@@ -13,7 +13,7 @@
         position: relative;
         width: 371px; height: 600px;
         display: inline-block;
-        border: 1px solid #888;
+        border: none;
         margin: auto;
         text-align: left;
         overflow: hidden;
