begin intro splash sequence view

--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -16,8 +16,7 @@
 </head>
 
 <body unresolved touch-action='auto'>
-  <uproxy-ui>
-  </uproxy-ui>
+  <uproxy-ui></uproxy-ui>
   <script src='popup.js'></script>
 </body>
 
