--- a/src/generic_ui/polymer/toolbar.html
+++ b/src/generic_ui/polymer/toolbar.html
@@ -7,7 +7,8 @@
       position: absolute;
       display: block;
       height: 50px; width: 100%;
-      background: #94a7cf;
+      // background: #94a7cf;
+      background: rgba(0,0,0,0.5);
       z-index: 1000;
     }
     </style>
