able to continue from one view to the next in intro splash

--- a/src/generic_ui/polymer/networks.html
+++ b/src/generic_ui/polymer/networks.html
@@ -15,7 +15,7 @@
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
-      left: -100%;
+      left: -100%; top: 0;
     }
     :host(.active) {
       left: 0;
