--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../lib/polymer/polymer.html">
+<link rel="import" href='description.html'>
 
 <polymer-element name='uproxy-settings' attributes=''>
 
@@ -20,22 +21,6 @@
       top: 0;
       overflow: hidden;
     }
-    #device-name {
-      box-sizing: border-box;
-      padding: 12px 16px;
-      font-size: 16px;
-      line-height: 20px;
-      color: #888;
-      outline: none;
-      border: none;
-      border-bottom: 1px solid #ddd;
-      -webkit-transition: all 0.23s !important;
-      -moz-transition: all 0.23s !important;
-      transition: all 0.23s !important;
-    }
-    #device-name:hover {
-      border-color: #aaa;
-    }
     .setting {
       padding: 16px;
       border-bottom: 1px solid #ccc;
@@ -55,7 +40,7 @@
 
     <div class='setting'>
       <h1>Device</h1>
-      <input type='text' id='device-name' placeholder='Description'></input>
+      <uproxy-description></uproxy-description>
       <p>
       Giving this device a name will let your contacts know how they are
       connecting with you. It also means you can have more than one device with
