add blurb on networks view

--- a/src/generic_ui/polymer/networks.html
+++ b/src/generic_ui/polymer/networks.html
@@ -24,6 +24,11 @@
     }
     </style>
 
+    <p>
+      To connect with your friends, you need to first find them on your existing
+      social networks.
+    </p>
+
     <template repeat='{{ n in networks }}' vertical layout>
       <uproxy-network network='{{n}}'></uproxy-network>
     </template>
