--- a/src/generic_ui/polymer/networks.html
+++ b/src/generic_ui/polymer/networks.html
@@ -10,13 +10,16 @@
       position: absolute;
       display: inline-block;
       box-sizing: border-box;
-      height: 100%; width: 100%;
-      padding-top: 50px;
+      height: 100%; width: 240px;
+      padding: 32px; padding-top: 70px;
       background-color: #fff;
-      -webkit-transition: all 0.23s !important;
-      -moz-transition: all 0.23s !important;
-      transition: all 0.23s !important;
       left: -100%; top: 0;
+      color: #666;
+      opacity: 0.8;
+      box-shadow: 1px 1px 32px #888;
+      -webkit-transition: all 0.5s !important;
+      -moz-transition: all 0.5s !important;
+      transition: all 0.5s !important;
     }
     :host(.active) {
       left: 0;
@@ -25,7 +28,7 @@
     </style>
 
     <p>
-      To connect with your friends, you need to first find them on your existing
+      To connect to your friends with uProxy, find them through your existing
       social networks.
     </p>
 
