--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -11,6 +11,8 @@
     text-align: center;
     margin: 0;
     font-family: sans-serif;
+    font-size: 13px;
+    background-color: #eee;
   }
   </style>
 </head>
