--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -23,6 +23,9 @@
       overflow: scroll;
       z-index: 100;
     }
+    :host(.hidden) {
+      right: -100%;
+    }
     #search {
       display: block;
       box-sizing: border-box;
