--- a/src/generic_ui/polymer/network.html
+++ b/src/generic_ui/polymer/network.html
@@ -6,7 +6,7 @@
       :host {
         display: block;
         box-sizing: border-box;
-        width: 100%;
+        width: 100%; height: 110px;
         padding: 16px;
         border-bottom: 1px solid #ccc;
       }
@@ -25,8 +25,9 @@
       h1 {
         font-weight: 100;
         font-size: 16px;
-        display: inline-block;
-        width: 30%;
+        display: block;
+        width: 80px;
+        font-variant: small-caps;
       }
     </style>
 
