begin glueing polymer to real UI. description update

--- a/src/generic_ui/polymer/description.html
+++ b/src/generic_ui/polymer/description.html
@@ -20,7 +20,8 @@
       border-color: #aaa;
     }
     </style>
-    <input type='text' id='device-name' placeholder='Description'></input>
+    <input type='text' id='device-name' placeholder='Description'
+        on-blur='{{update}}' value='{{description}}'></input>
   </template>
   <script src='description.js'></script>
 </polymer-element>
