--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -5,6 +5,13 @@
   <title>uProxy polymer UI</title>
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
   <script src='../lib/platform/platform.js'></script>
+
+  <script src="../scripts/uproxy.js"></script>
+  <script src="../scripts/util.js"></script>
+  <script src="../scripts/consent.js"></script>
+  <script src="../scripts/user.js"></script>
+  <script src="../scripts/dependencies.js"></script>
+
   <link rel='import' href='ui.html'>
   <style>
   body {
