--- a/freedom/samples/freedomchat-chromeapp/main.html
+++ b/freedom/samples/freedomchat-chromeapp/main.html
@@ -2,6 +2,7 @@
 <head>
   <title>PeerConnection chat client</title>
   <!-- Dependencies for freedom-for-*-for-uproxy -->
+  <script src='lib/arraybuffers/arraybuffers.js'></script>
   <script src='lib/handler/queue.js'></script>
   <script src='lib/logging/logging.js'></script>
   <script src='lib/webrtc/third_party/adapter.js'></script>
