--- a/webrtc/samples/chat-webpage/main.html
+++ b/webrtc/samples/chat-webpage/main.html
@@ -20,6 +20,7 @@
     <button id="sendButtonB">Send</button>
   </div>
 
+  <script src='lib/arraybuffers/arraybuffers.js'></script>
   <script src='lib/handler/queue.js'></script>
   <script src='lib/logging/logging.js'></script>
   <script src='lib/webrtc/third_party/adapter.js'></script>
