fix intro screen sequence and css bugs

--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -16,6 +16,9 @@
   <link rel='import' href='ui.html'>
   <style>
   body {
+    position: relative;
+    width: 371px; height: 600px;
+    display: block;
     text-align: center;
     margin: 0;
     font-family: sans-serif;
