--- a/src/generic_ui/polymer/toolbar.html
+++ b/src/generic_ui/polymer/toolbar.html
@@ -4,7 +4,8 @@
   <template>
     <style>
     :host {
-      position: absolute;
+      position: fixed;
+      top: 0; left: 0;
       display: block;
       height: 50px; width: 100%;
       // background: #94a7cf;
