--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -6,7 +6,7 @@
   <template>
     <style>
     :host {
-      position: relative;
+      position: absolute;
       display: block;
       box-sizing: border-box;
       height: 100%; width: 100%;
@@ -51,7 +51,7 @@
     }
     </style>
 
-    <div class='view' id='intro' hidden?='{{0!==currentView}}'>
+    <div class='view' id='intro' hidden?='{{0!==state}}'>
       <img id='proxy-pic' src='../icons/splash.png'>
       <h1>Share your pathway to the Internet</h1>
       <p>
@@ -60,7 +60,7 @@
       </p>
     </div>
 
-    <div class='view' id='description' hidden?='{{1!==currentView}}'>
+    <div class='view' id='description' hidden?='{{1!==state}}'>
       <h1>What name should others see when this device is online?</h1>
       <uproxy-description></uproxy-description>
       <p>
