--- a/src/generic_ui/polymer/ui.html
+++ b/src/generic_ui/polymer/ui.html
@@ -11,11 +11,12 @@
   <template>
     <style>
       :host {
-        position: relative;
+        position: fixed;
         width: 371px; height: 600px;
-        display: inline-block;
-        border: none;
-        margin: auto;
+        left: 0;
+        top: 0;
+        display: block;
+        border: none; margin: auto;
         text-align: left;
         overflow: hidden;
         background: url('../icons/internet.png') center top no-repeat #fff;
@@ -25,7 +26,7 @@
       }
     </style>
 
-    <uproxy-toolbar hidden?='{{!loggedIn}}'>
+    <uproxy-toolbar hidden?='{{SPLASH==view || !loggedIn}}'>
       <uproxy-button id='btnGive'
           hidden?='{{GIVING == gestalt}}'
           img='../icons/share_white.svg'>
