--- a/src/generic_ui/polymer/network.html
+++ b/src/generic_ui/polymer/network.html
@@ -29,6 +29,33 @@
         width: 80px;
         font-variant: small-caps;
       }
+      #waiting {
+        color: #bbb;
+        position: relative;
+        cursor: default;
+      }
+      #hourglass {
+        position: absolute;
+        height: 28px; width: 28px;
+        left: 40px; top: 20px;
+        background-image: url('../icons/waiting_grey.svg');
+        -webkit-animation-name: rotate;
+        -webkit-animation-duration: 1s;
+        -webkit-animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
+        -moz-animation-name: rotate;
+        -moz-animation-duration: 1s;
+        -moz-animation-iteration-count: infinite;
+        -moz-animation-timing-function: linear;
+      }
+      @-webkit-keyframes rotate {
+        from {-webkit-transform: rotate(0deg);}
+        to {-webkit-transform: rotate(360deg);}
+      }
+      @-moz-keyframes rotate {
+        from {-moz-transform: rotate(0deg);}
+        to {-moz-transform: rotate(360deg);}
+      }
     </style>
 
     <div class='network'>
@@ -39,8 +66,9 @@
       <span hidden?='{{LOGGED_IN!=state}}'>
         <button on-tap='{{disconnect}}'>Disconnect</button>
       </span>
-      <span hidden?='{{LOGGING_IN!=state}}'>
+      <span id='waiting' hidden?='{{LOGGING_IN!=state}}'>
         Waiting for sign in...
+        <div id='hourglass'></div>
       </span>
       <!--
       <input type='checkbox'>
