simplify uproxy-button

--- a/src/generic_ui/polymer/button.html
+++ b/src/generic_ui/polymer/button.html
@@ -38,11 +38,11 @@
       opacity: 1.0;
     }
     </style>
-    <div class='btn' on-tap='{{click}}'>
+    <div class='btn'>
       <img src='{{img}}' />
+      <content>
+      </content>
     </div>
-    <content>
-    </content>
   </template>
   <script src='button.js'></script>
 </polymer-element>
