wire real roster to polymer UI

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -69,7 +69,7 @@
       class='{{ expanded? "expanded" : "" }}'
       on-mousedown='{{toggle}}'
       on-blur='{{collapse}}'>
-      <img id='avatar' src='{{ contact.pic }}' />
+      <img id='avatar' src='{{ contact.imageData }}' />
       <div id='words'>
         <h1>{{ contact.name }}</h1>
         <span id='description'>{{ contact.description }}</span>
