--- a/src/generic_ui/polymer/ui.html
+++ b/src/generic_ui/polymer/ui.html
@@ -29,12 +29,12 @@
     <uproxy-toolbar hidden?='{{SPLASH==view || !loggedIn}}'>
       <uproxy-button id='btnGive'
           on-tap='{{ giveMode }}'
-          hidden?='{{ GIVING == gestalt }}'
+          hidden?='{{ UI.Gestalt.GIVING == gestalt }}'
           img='../icons/share_white.svg'>
       </uproxy-button>
       <uproxy-button id='btnGet'
           on-tap='{{ getMode }}'
-          hidden?='{{ GETTING == gestalt }}'
+          hidden?='{{ UI.Gestalt.GETTING == gestalt }}'
           img='../icons/receive_white.svg'>
       </uproxy-button>
       <uproxy-button id='btnNetworks'
