fix gestalt toggle

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -46,7 +46,7 @@
     #words {
       display: inline-block;
       padding: 0 16px;
-      words: 200px; height: 100%;
+      width: 200px; height: 100%;
     }
     h1 {
       display: inline;
