--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -7,6 +7,7 @@
   <script src='../lib/platform/platform.js'></script>
   <script src='../lib/lodash/dist/lodash.compat.js'></script>
 
+  <script src='../scripts/ui.js'></script>
   <script src='../scripts/uproxy.js'></script>
   <script src='../scripts/util.js'></script>
   <script src='../scripts/consent.js'></script>
