simplified/cleanedup sample app

--- a/webrtc/samples/chat-webpage/main.html
+++ b/webrtc/samples/chat-webpage/main.html
@@ -8,7 +8,7 @@
   <textarea id="sendAreaA" disabled></textarea>
   <textarea id="receiveAreaA" disabled></textarea>
   <div>
-    <button id="sendButtonA">Send</button>
+    <button id="sendButtonA" disabled>Send</button>
   </div>
 
   <hr>
@@ -17,7 +17,7 @@
   <textarea id="sendAreaB" disabled></textarea>
   <textarea id="receiveAreaB" disabled></textarea>
   <div>
-    <button id="sendButtonB">Send</button>
+    <button id="sendButtonB" disabled>Send</button>
   </div>
 
   <script src='lib/arraybuffers/arraybuffers.js'></script>
