fixes to manifest permissions, and cleanup of deps and setup script

--- a/src/chrome/app/uproxy.html
+++ b/src/chrome/app/uproxy.html
@@ -13,7 +13,7 @@
       {
         "strongIsolation": true,
         "stayLocal": true,
-        "debug": false
+        "debug": "log"
       }
     </script>
     <script type='text/javascript' src='scripts/plumbing.js'></script>
