added crypto dir for random

--- a/webrtc/samples/chat-webpage/main.html
+++ b/webrtc/samples/chat-webpage/main.html
@@ -23,6 +23,7 @@
   <script src='lib/arraybuffers/arraybuffers.js'></script>
   <script src='lib/handler/queue.js'></script>
   <script src='lib/logging/logging.js'></script>
+  <script src='lib/crypto/random.js'></script>
   <script src='lib/webrtc/third_party/adapter.js'></script>
   <script src='lib/webrtc/datachannel.js'></script>
   <script src='lib/webrtc/peerconnection.js'></script>
