--- a/freedom/samples/freedomchat-chromeapp/main.html
+++ b/freedom/samples/freedomchat-chromeapp/main.html
@@ -4,6 +4,7 @@
   <!-- Dependencies for freedom-for-*-for-uproxy -->
   <script src='lib/arraybuffers/arraybuffers.js'></script>
   <script src='lib/handler/queue.js'></script>
+  <script src='lib/crypto/random.js'></script>
   <script src='lib/logging/logging.js'></script>
   <script src='lib/webrtc/third_party/adapter.js'></script>
   <script src='lib/webrtc/datachannel.js'></script>
