--- a/webrtc/samples/chat2-webpage/main.html
+++ b/webrtc/samples/chat2-webpage/main.html
@@ -2,6 +2,7 @@
 <head>
   <title>Peer Connection Sample Code</title>
   <script src='lib/logging/logging.js'></script>
+  <script src='lib/crypto/random.js'></script>
   <script src='lib/arraybuffers/arraybuffers.js'></script>
   <script src='lib/handler/queue.js'></script>
   <script src='lib/third_party/angular/angular-1.3.0-beta15.min.js'></script>
