--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -31,7 +31,7 @@
       box-sizing: border-box;
       width: 100%;
       padding: 12px 16px;
-      font-size: 16px;
+      font-size: 14px;
       line-height: 20px;
       color: #888;
       outline: none;
@@ -43,6 +43,10 @@
     }
     #search:hover {
       border-color: #aaa;
+    }
+    ::-webkit-input-placeholder {
+      color: #ccc;
+      font-weight: 100;
     }
     </style>
 
