restore grunt rule for uistatic, update uproxy-core-env into core html

--- a/src/generic_ui/polymer/ui.html
+++ b/src/generic_ui/polymer/ui.html
@@ -11,7 +11,7 @@
   <template>
     <style>
       :host {
-        position: fixed;
+        position: absolute;
         width: 371px; height: 600px;
         left: 0;
         top: 0;
