--- a/src/generic_ui/polymer/toolbar.html
+++ b/src/generic_ui/polymer/toolbar.html
@@ -4,7 +4,7 @@
   <template>
     <style>
     :host {
-      position: fixed;
+      position: absolute;
       top: 0; left: 0;
       display: block;
       height: 50px; width: 100%;
