rename freedomchat-webpage to freedom-chat-webpage and readonly is better than disabled for firefox

--- a/freedom/samples/freedom-copypaste-webpage/main.html
+++ b/freedom/samples/freedom-copypaste-webpage/main.html
@@ -45,7 +45,7 @@
 
       <br>
       <div id="offerPanel_step2Container" style="display: none;">
-        <textarea id="offerPanel_outboundMessage" disabled></textarea>
+        <textarea id="offerPanel_outboundMessage" readonly></textarea>
         <p>
           Copy/paste the complete text above and send it to the other party.
         </p>
@@ -74,7 +74,7 @@
       </div>
 
       <div id="answerPanel_step2Container" style="display: none;">
-        <textarea id="answerPanel_outboundMessage" disabled></textarea>
+        <textarea id="answerPanel_outboundMessage" readonly></textarea>
         <p>
           Copy/paste the complete text above and send it to the other party.
         </p>
