missed some get access and give access -> offer and answer references

--- a/freedom/samples/freedom-copypaste-webpage/main.html
+++ b/freedom/samples/freedom-copypaste-webpage/main.html
@@ -21,8 +21,8 @@
       <br><br>
 
       <p class="centered">
-        <a id="startPanel_getAccessLink" class="button">Initiate chat</a>
-        <a id="startPanel_giveAccessLink" class="button">Accept invitation</a>
+        <a id="startPanel_offerLink" class="button">Initiate chat</a>
+        <a id="startPanel_answerLink" class="button">Accept invitation</a>
       </p>
 
     </div>
