Get new uproxy-networking code into uproxy freedom module

--- a/src/chrome/app/uproxy.html
+++ b/src/chrome/app/uproxy.html
@@ -8,6 +8,7 @@
     <script type='text/javascript' src='scripts/view_oauth.js'></script>
     <script type='text/javascript' src='scripts/chrome_glue.js'></script>
     <script type='text/javascript' src='scripts/freedom-config.js'></script>
+    <script type='text/javascript' src='lib/uproxy-core-env.js'></script>
     <script src='lib/freedom-for-chrome-for-uproxy.js'
             data-manifest='scripts/freedom-module.json'>
       {
