--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -45,18 +45,17 @@
     }
     #words {
       display: inline-block;
-      padding: 0 16px;
-      width: 200px; height: 100%;
+      width: 250px; height: 100%;
     }
     h1 {
-      display: inline;
-      font-size: 16px;
-      font-weight: 100;
-    }
-    #description {
-      color: #aaa;
       display: block;
-      font-size: 10px;
+      font-size: 16px; font-weight: 100;
+      margin: 0; padding: 8px;
+    }
+    #words:hover h1 { color: #aaa; }
+    #description {
+      color: #aaa; display: block;
+      font-size: 10px; margin-left: 8px;
     }
     #instances {
       padding: 8px;
@@ -67,16 +66,18 @@
     </style>
 
     <div tabindex='-1'  id='frame'
-      class='{{ expanded? "expanded" : "" }}'
-      on-mousedown='{{toggle}}'
-      on-blur='{{collapse}}'>
+      class='{{ expanded? "expanded" : "" }}'>
+     <!-- on-blur='{{ collapse }}'> -->
       <img id='avatar' src='{{ contact.imageData }}' />
       <div id='words'>
-        <h1>{{ contact.name }}</h1>
+        <h1 on-mousedown='{{toggle}}'>{{ contact.name }}</h1>
         <span id='description'>{{ contact.description }}</span>
         <div id='instances' hidden?='{{!expanded}}'>
           <template repeat='{{ i in contact.instances }}' vertical layout>
-            <uproxy-instance instance='{{ i }}'></uproxy-instance>
+            <uproxy-instance
+                userId='{{ contact.userId }}'
+                instance='{{ i }}'>
+            </uproxy-instance>
           </template>
         </div>
       </div>
